# fastapi-fileparser

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: config.py  main.py  schemas.py
src/app/api/: routes.py
src/app/parsers/: base.py  docx.py  image.py  pdf.py  text.py
src/app/services/: llm.py  llm_anthropic.py  llm_openai.py  parser_registry.py
tests/: conftest.py  test_api.py  test_llm_providers.py  test_registry.py
tests/test_parsers/: test_docx.py  test_image.py  test_pdf.py  test_text.py
