[project]
name = "fastapi-fileparser"
version = "0.1.0"
description = "LLM-powered file text parser API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4",
    "charset-normalizer>=3.3",
    "pypdfium2>=4.30",
    "python-docx>=1.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "pillow>=10.4",
    "filetype>=1.2",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
